2021-01-15   Ales Cepek <cepek@gnu.org>

	* new release 2.13

	* Conversions between yaml and input xml (gkf) tested for all
	available data files in the tests suite (subdirectory gama-local).

	* Command line programs gama-local, gama-local-yaml2gkf and
	gama-local-gkf2yaml can now read input data from standard input.


2020-11-20   Ales Cepek <cepek@gnu.org>

	* new release 2.12

	* Alternative support of input data based on YAML format. YAML
	support was added for gama-local as an alternative to the existing
	XML input format. The YAML support is currently limited only to a
	conversion program gama-local-yaml2gkf but it may be fully
	integrated in gama-local program later.


2020-10-27   Ales Cepek <cepek@gnu.org>

	* new release 2.11

	* In test suites all template input files *.in (used to generate
	test shell scripts *.sh) were renamed to *.sh_ . Tests suit
	subdirectory scripts were renamed to src.

	It was slightly confusing to have input files named as *.in
	because this extension is used in Makefile.in files which are
	generated from Makefile.am.

	* Added a new option --enable-extra-tests (default is no) to the
	configure.ac script. Extra gama-local test may be running
	substantially longer (for example see railway-control.gkf).

	* Removed obscure adjustment parameter
	'update-constraiend-parameters'. The update effected SqliteReader
	lib/gnu_gama/local/sqlitereader.cpp, classes LocalNetwork and
	GKFparser and file gnu-gama-data.xsd.

	* Removed gnu-gama-data.dtd and all its references (superseded by
	.xsd), several XML files were updated in tests/gama-g3 to use
	gnu-gama-data xsd definition.


2020-09-25   Petra Millarova <millapet@gnu.org>

	* new release 2.10

	#######################################
	#  See ChangeLog.3 for older changes  #
	#######################################