@@ -1,3 +1,7 @@
+	* removed 'final' specifier for local observations destructor in
+	lib/gnu_gama/local/observation.h
+
+
 2021-01-15   Ales Cepek <cepek@gnu.org>
 
 	* new release 2.13
